--- a/index.html
+++ b/index.html
@@ -119,9 +119,13 @@
         <div class="form-column">
           <h3>Driver Details</h3>
           <div class="retrieve-section">
+            <label for="driver_number">Driver ID:</label>
+            <input type="text" id="driver_id" name="driver_id" required>
+            <button type="button" id="retrieveDriverBtn">Retrieve Driver</button>
+          </div>
+          <div class="retrieve-section">
             <label for="driver_number">Driver Number:</label>
             <input type="text" id="driver_number" name="driver_number" required>
-            <button type="button" id="retrieveDriverBtn">Retrieve Driver</button>
           </div>
           <div class="driver-detail">
             <label for="driver_name">Driver Name:</label>
