--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="form-column">
           <h3>Driver Details</h3>
           <div class="retrieve-section">
-            <label for="driver_number">Driver ID:</label>
+            <label for="driver_id">Driver ID:</label>
             <input type="text" id="driver_id" name="driver_id" required>
             <button type="button" id="retrieveDriverBtn">Retrieve Driver</button>
           </div>
